<resources>
    <string name="app_name">Job Search</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="user_avatar">User Avatar</string>
    <string name="logout">Logout</string>
    <string name="job_image">Job Image</string>
    <string name="arrow_right_icon">Arrow Right Icon</string>
    <string name="try_again">Try Again</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="full_time">Fulltime</string>
    <string name="apply">Apply</string>
    <string name="icon_expand_collapse_filter">Icon Expand Collapse Filter</string>
    <string name="search">Search</string>
    <string name="job_list">Job List</string>
    <string name="company">Company</string>
    <string name="go_to_website">Go to Website</string>
    <string name="job_specification">Job Specification</string>
    <string name="title">Title</string>
    <string name="job_detail">Job Detail</string>
    <string name="how_to_apply">How to Apply</string>
</resources>