<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />

        <variable
            name="item"
            type="com.rizqanmr.jobsearch.data.network.model.JobItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.jobdetail.JobDetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_job_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green_light"
            app:title="@string/job_detail"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            app:layout_constraintTop_toBottomOf="@id/toolbar_job_detail"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_company_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginStart="@dimen/dp16"
                    android:text="@string/company"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_company_title"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/dp8"
                    app:cardElevation="@dimen/dp4"
                    app:cardMaxElevation="@dimen/dp4"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/image_company"
                            android:layout_width="@dimen/dp120"
                            android:layout_height="@dimen/dp120"
                            android:contentDescription="@string/job_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@tools:sample/avatars" />

                        <TextView
                            android:id="@+id/tv_company"
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp8"
                            android:layout_marginTop="@dimen/dp8"
                            android:text="@{item.company}"
                            android:textSize="@dimen/sp18"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/image_company"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Company Name" />

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp8"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@{item.location}"
                            android:textSize="@dimen/sp16"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_company"
                            app:layout_constraintStart_toStartOf="@id/tv_company"
                            tools:text="location company" />

                        <TextView
                            android:id="@+id/tv_url"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:layout_marginBottom="@dimen/dp8"
                            android:autoLink="web"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/go_to_website"
                            android:textColor="@color/blue_url"
                            android:textSize="@dimen/sp16"
                            android:textStyle="italic|bold"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintVertical_bias="0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_location"
                            app:layout_constraintStart_toStartOf="@id/tv_company" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_job_spec_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginStart="@dimen/dp16"
                    android:text="@string/job_specification"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/cv_company"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_job_spec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_job_spec_title"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/dp8"
                    app:cardElevation="@dimen/dp4"
                    app:cardMaxElevation="@dimen/dp4"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/dp16"
                        android:paddingHorizontal="@dimen/dp12">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textSize="@dimen/sp16"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_job_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{item.title}"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_title"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="Job Title"/>

                        <TextView
                            android:id="@+id/tv_fulltime_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp16"
                            android:text="@string/full_time"
                            android:textSize="@dimen/sp16"
                            app:layout_constraintTop_toBottomOf="@id/tv_job_title"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_fulltime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{item.isFulltime()}"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_fulltime_title"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="Yes"/>

                        <TextView
                            android:id="@+id/tv_description_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp16"
                            android:text="@string/description"
                            android:textSize="@dimen/sp16"
                            app:layout_constraintTop_toBottomOf="@id/tv_fulltime"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_description_title"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="Yes"/>

                        <TextView
                            android:id="@+id/tv_how_to_apply_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp16"
                            android:text="@string/how_to_apply"
                            android:textSize="@dimen/sp16"
                            app:layout_constraintTop_toBottomOf="@id/tv_description"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_how_to_apply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_how_to_apply_title"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="Yes"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/green_light"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_job_detail"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>